# cs-tracker-api

./: Cargo.toml  LICENSE  README.md  build.rs
migrations/: 0001_init.sql  0002_renamed_table.sql  0003_changed_icon_size.sql  0004_changed_cost_type.sql  0005_different_currencies.sql  0006_changed_coll_primary_key.sql  0007_drop_items_table.sql  0008_items_fuzzy_search.sql  0009_add_more_currencies.sql
src/: error.rs  guard.rs  jwt.rs  main.rs  state.rs
src/api/: mod.rs  user.rs
src/api/investment/: collection.rs  mod.rs
src/db/: collection.rs  investment.rs  item.rs  mod.rs  user.rs
