[package]
name = "cs-tracker-server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["macros"] }
http = "0.2"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
redis = { version = "0.23.0", features = ["tokio-comp", "json"] }
jsonwebtoken = "8.3"
tower-http = { version = "0.4.0", features = ["cors"] }
tower-cookies = "0.9"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "rust_decimal"] }
dotenv = "0.15"
once_cell = "1.18"
